--- a/80-function.html
+++ b/80-function.html
@@ -1,37 +1,23 @@
-<!--
-  Copyright 2013, 2016 IBM Corp.
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-  http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
 
 <script type="text/x-red" data-template-name="function">
     <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> <span data-i18n="node-red:common.label.name"></span></label>
-        <input type="text" id="node-input-name" data-i18n="[placeholder]node-red:common.label.name">
+        <label for="node-input-name"><i class="fa fa-tag"></i> <span data-i18n="common.label.name"></span></label>
+        <input type="text" id="node-input-name" data-i18n="[placeholder]common.label.name">
     </div>
     <div class="form-row" style="margin-bottom: 0px;">
-        <label for="node-input-func"><i class="fa fa-wrench"></i> <span data-i18n="node-red:function.label.function"></span></label>
+        <label for="node-input-func"><i class="fa fa-wrench"></i> <span data-i18n="function.label.function"></span></label>
         <input type="hidden" id="node-input-func" autofocus="autofocus">
         <input type="hidden" id="node-input-noerr">
     </div>
-    <div class="form-row node-text-editor-row">
+    <div class="form-row node-text-editor-row" style="position:relative">
+        <div style="position: absolute; right:0; bottom:calc(100% + 3px);"><button id="node-function-expand-js" class="editor-button editor-button-small"><i class="fa fa-expand"></i></button></div>
         <div style="height: 250px; min-height:150px;" class="node-text-editor" id="node-input-func-editor" ></div>
     </div>
     <div class="form-row">
-        <label for="node-input-outputs"><i class="fa fa-random"></i> <span data-i18n="node-red:function.label.outputs"></span></label>
+        <label for="node-input-outputs"><i class="fa fa-random"></i> <span data-i18n="function.label.outputs"></span></label>
         <input id="node-input-outputs" style="width: 60px;" value="1">
     </div>
-    <div class="form-tips"><span data-i18n="node-red:function.tip"></span></div>
+    <div class="form-tips"><span data-i18n="function.tip"></span></div>
 </script>
 
 <script type="text/x-red" data-help-name="function">
@@ -67,6 +53,12 @@
     <p>The Catch node can also be used to handle errors. To invoke a Catch node,
     pass <code>msg</code> as a second argument to <code>node.error</code>:</p>
     <pre>node.error("Error",msg);</pre>
+    <h4>Referring Node Information</h4>
+    <p>In the function block, id and name of the node can be referenced using the following properties:</p>
+    <ul>
+        <li><code>node.id</code> - id of the node</li>
+        <li><code>node.name</code> - name of the node</li>
+    </ul>
 </script>
 
 <script type="text/javascript">
@@ -83,12 +75,21 @@
         outputs:1,
         icon: "function.png",
         label: function() {
-            return this.name;
+            return this.name||this._("function.function");
+        },
+        labelStyle: function() {
+            return this.name?"node_label_italic":"";
         },
         oneditprepare: function() {
             var that = this;
             $( "#node-input-outputs" ).spinner({
-                min:1
+                min:1,
+                change: function(event, ui) {
+                    var value = this.value;
+                    if (!value.match(/^\d+$/)) { value = 1;  }
+                    else if (value < this.min) { value = this.min; }
+                    if (value !== this.value) { $(this).spinner("value", value); }
+                }
             });
 
             this.editor = RED.editor.createEditor({
@@ -119,6 +120,22 @@
                 fields:['name','outputs']
             });
             this.editor.focus();
+
+            $("#node-function-expand-js").click(function(e) {
+                e.preventDefault();
+                var value = that.editor.getValue();
+                RED.editor.editJavaScript({
+                    value: value,
+                    cursor: that.editor.getCursorPosition(),
+                    complete: function(v,cursor) {
+                        that.editor.setValue(v, -1);
+                        that.editor.gotoLine(cursor.row+1,cursor.column,false);
+                        setTimeout(function() {
+                            that.editor.focus();
+                        },300);
+                    }
+                })
+            })
         },
         oneditsave: function() {
             var annot = this.editor.getSession().getAnnotations();
