--- a/80-function.html
+++ b/80-function.html
@@ -1,11 +1,11 @@
 
 <script type="text/x-red" data-template-name="function">
     <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> <span data-i18n="common.label.name"></span></label>
-        <input type="text" id="node-input-name" data-i18n="[placeholder]common.label.name">
+        <label for="node-input-name"><i class="fa fa-tag"></i> <span data-i18n="node-red:common.label.name"></span></label>
+        <input type="text" id="node-input-name" data-i18n="[placeholder]node-red:common.label.name">
     </div>
     <div class="form-row" style="margin-bottom: 0px;">
-        <label for="node-input-func"><i class="fa fa-wrench"></i> <span data-i18n="function.label.function"></span></label>
+        <label for="node-input-func"><i class="fa fa-wrench"></i> <span data-i18n="node-red:function.label.function"></span></label>
         <input type="hidden" id="node-input-func" autofocus="autofocus">
         <input type="hidden" id="node-input-noerr">
     </div>
@@ -14,10 +14,10 @@
         <div style="height: 250px; min-height:150px;" class="node-text-editor" id="node-input-func-editor" ></div>
     </div>
     <div class="form-row">
-        <label for="node-input-outputs"><i class="fa fa-random"></i> <span data-i18n="function.label.outputs"></span></label>
+        <label for="node-input-outputs"><i class="fa fa-random"></i> <span data-i18n="node-red:function.label.outputs"></span></label>
         <input id="node-input-outputs" style="width: 60px;" value="1">
     </div>
-    <div class="form-tips"><span data-i18n="function.tip"></span></div>
+    <div class="form-tips"><span data-i18n="node-red:function.tip"></span></div>
 </script>
 
 <script type="text/x-red" data-help-name="function">
@@ -75,7 +75,7 @@
         outputs:1,
         icon: "function.png",
         label: function() {
-            return this.name||this._("function.function");
+            return this.name||this._("node-red:function.function");
         },
         labelStyle: function() {
             return this.name?"node_label_italic":"";
